# paper-assist-agent

./: .gitignore  LICENSE  README-EN.md  README.md  package.json  pyproject.toml
.github/workflows/: publish.yml
agent/: paper-assist.md
current_draft/: main.md
current_draft/sections/: 01_introduction.md  02_related_work.md  03_methodology.md  04_experiments.md  05_conclusion.md
src/paper_assist/: __init__.py  cli.py  compare_papers.py  extract_equations.py  extract_text.py  install.py
src/paper_assist/agent/: paper-assist.md
