[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-assist"
version = "0.1.3"
description = "Academic paper analysis tool - PDF equation extraction, citation value assessment, automatic research log generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kim Jae Hyuk", email = "rlawogur816@gmail.com"}
]
keywords = ["academic", "paper", "analysis", "latex", "citation", "claude", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
dependencies = [
    "pymupdf>=1.23.0",
    "pix2tex>=0.1.0",
    "scikit-learn>=1.3.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
paper-assist = "paper_assist.cli:main"

[project.urls]
Homepage = "https://github.com/Hyuk0816/paper-assist-agent"
Issues = "https://github.com/Hyuk0816/paper-assist-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_assist"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/README-EN.md",
    "/LICENSE",
]
